# Ember

./: README.md  assembly_flowchart.html  auto_flowchart_3000.py  compiler  file_watcher.py  instruction_categories.py  lexer.asm  parser.asm  test.emb  test_negative.emb
IDE Application/Ember/: package-lock.json  package.json
IDE Application/Ember/src/: app.html
IDE Application/Ember/src-tauri/: Cargo.toml  tauri.conf.json
IDE Application/Ember/src-tauri/src/: emberon  main.rs
IDE Application/Ember/src/css/: main.css
IDE Application/Ember/src/scripts/: main.js
